--- a/style.css
+++ b/style.css
@@ -149,6 +149,24 @@ body {
     font-size: 16px;
     font-weight: 400;
     line-height: 19px;
+    Width: 1383px;
+    background: #222222;
+    color: aliceblue;
+    margin: 0 auto;
+}
+
+
+.btns {
+    width: 780px;
+    /* height: 560px; */
+    margin: 0 auto;
+    position: relative;
+
+}
+
+.letter {
+    margin-top: 50px;
+    margin-left: 210px;
 }
 
 .span {
@@ -280,10 +298,104 @@ body {
     text-align: center;
     padding-top: 80px;
 }
+.dairy {
+    display: flex;
+    gap: 60px;
+    margin-top: 50px;
+    margin-left: 185px;
+
+}
+
+.error1 {
+    width: 200px;
+    height: 300px;
+    background-color: rgb(69, 65, 65);
+    border-radius: 15px;
+    font-size: 12px;
+}
+
+.error2 {
+    width: 200px;
+    height: 300px;
+    background-color: rgb(69, 65, 65);
+    border-radius: 15px;
+    font-size: 12px;
+}
+
+.error3 {
+    width: 200px;
+    height: 300px;
+    background-color: rgb(69, 65, 65);
+    border-radius: 15px;
+    font-size: 12px;
+}
+
+.error4 {
+    width: 200px;
+    height: 300px;
+    background-color: rgb(69, 65, 65);
+    border-radius: 15px;
+    font-size: 12px;
+}
+
+
+.charset {
+    padding-top: 25px;
+}
+
+.komanda {
+    color: rgba(230, 206, 170, 1);
+}
+
+.link {
+    padding: 180px;
+    font-weight: 600;
+    font-size: 12px;
+}
+
+
+.kind {
+    width: 1348px;
+    height: 321px;
+
+}
+
+
+.vefa {
+    width: 620px;
+    height: 321px;
+    border: 2px solid gray;
+    border-radius: 20px;
+
+
+
+    position: relative;
+    left: 450px;
+    bottom: 400px;
+
+}
 
 
 
 .ffd {
     width: 73px;
     height: 73px;
+}
+
+.yellow {
+    color: rgba(230, 206, 170, 1);
+}
+
+
+.content-shok {
+    display: flex;
+    justify-content: flex-start;
+  
+
+}
+
+.image {
+    width: 1440px;
+    height: 708px;
+
 }
